<resources>
    <string name="app_name">CP Analyzer</string>
    <string name="contest_mode">Contest Mode</string>
    <string name="single_problem">Practise</string>
    <string name="history">history</string>
    <string name="default_time">03:00:00</string>
    <string name="default_start">00:00:00</string>
    <string name="reset_timer">Timer Reset Successfully</string>
    <string name="timer_finished">Timer Finished</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="default_up_start">00:00:00</string>
    <string name="resume">resume</string>
    <string name="time_minutes">Enter Total time in minutes</string>
    <string name="total_question">Enter Total number of questions</string>
    <string name="submit">Submit</string>
    <string name="welcome">Welcome</string>
    <string name="default_values">default values</string>
    <string name="invalid_values">Invalid values Entered, Using default Values</string>
    <string name="useless">No need</string>
    <string name="github">https://github.com/desdemona2/CP-Analyzer</string>
    <string name="date_time">Date/Time</string>
    <string name="performance">Performance</string>
</resources>