<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/cancel"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintDimensionRatio="1"
        android:src="@drawable/ic_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"/>

    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cancel"
        android:text="@string/welcome"
        android:gravity="center"
        android:textSize="52sp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/inter_bold"/>

    <ScrollView
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        >

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            app:cardPreventCornerOverlap="true"
            app:cardCornerRadius="50dp"
            >
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/time_input_wrapper"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="60dp"
                        android:layout_marginHorizontal="10dp"
                        android:hint="@string/time_minutes"
                        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/time_input"
                            android:layout_width="match_parent"
                            android:fontFamily="@font/inter_medium"
                            android:layout_height="wrap_content" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/total_questions_wrapper"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:layout_marginHorizontal="10dp"
                        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                        android:hint="@string/total_question"
                        app:layout_constraintStart_toStartOf="@+id/time_input_wrapper"
                        app:layout_constraintEnd_toEndOf="@+id/time_input_wrapper"
                        app:layout_constraintTop_toBottomOf="@+id/time_input_wrapper">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/total_questions"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/default_values"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/total_questions_wrapper"
                        android:layout_marginTop="40dp"
                        android:layout_marginStart="10dp"
                        android:paddingBottom="30dp"
                        style="@style/Widget.Material3.Button.TextButton"
                        android:textSize="22sp"
                        android:text="@string/default_values"
                        />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/submit"
                        app:layout_constraintTop_toTopOf="@+id/default_values"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="10dp"
                        android:text="@string/submit"
                        style="@style/Widget.Material3.Button.TextButton"
                        android:textSize="22sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />

                </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>