<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PractiseMode">

    <ImageView
        android:id="@+id/container"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/background_chronometer"/>

    <Chronometer
        android:id="@+id/chronometer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="@+id/container"
        app:layout_constraintEnd_toEndOf="@+id/container"
        app:layout_constraintBottom_toBottomOf="@id/container"
        app:layout_constraintTop_toTopOf="@id/container"
        android:layout_margin="20dp"
        android:gravity="center"
        android:textSize="42sp"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"
        tools:listitem="@layout/items"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/bottom_bar"
        app:layout_constraintTop_toBottomOf="@+id/chronometer"
        />

    <!--  Toggle Button  -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        style="@style/Widget.Material3.Button.TextButton"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bottom_bar"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        />

    <!--  Bottom Bar Below  -->
    <androidx.cardview.widget.CardView
        android:id="@+id/bottom_bar"
        android:backgroundTint="@color/purple_500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="8dp"
        android:layout_marginBottom="8dp"
        app:cardCornerRadius="20dp"
        android:layout_height="50dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/home"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginEnd="68dp"
                android:contentDescription="@string/contest_mode"
                android:src="@drawable/ic_university"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1"
                app:layout_constraintEnd_toStartOf="@+id/single"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/single"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginEnd="69dp"
                android:contentDescription="@string/single_problem"
                android:src="@drawable/ic_practise"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1"
                app:layout_constraintEnd_toStartOf="@+id/history"
                app:layout_constraintStart_toEndOf="@+id/home"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/history"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:contentDescription="@string/history"
                android:src="@drawable/ic_history"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/single"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>